--- a/a1.html
+++ b/a1.html
@@ -1,9 +1,32 @@
 <html>
     <body>
 
-        <script>
-            
-        </script>
+        <p id="i1"></p>
+        <p id="i2"></p>
+        <p id="i3"></p>
+        <p id="i4"></p>
+        <p id="i5"></p>
+
+    <script>
+        var x=90;
+        // Array : Save more number of data sequentially
+        // Position of array : Index of array
+        var friends=['Gisa','Rony','Shiv'];
+
+        document.getElementById("i1").innerHTML=friends;
+        document.getElementById("i2").innerHTML=friends[0];
+        document.getElementById("i3").innerHTML=friends[1];
+        document.getElementById("i4").innerHTML=friends[2];
+        document.getElementById("i5").innerHTML=friends[3];
+
+        x=friends.join("**"); //  Join all values of array
+        document.write(x);
+        document.write("<br>"+friends);
+
+        var y=friends.pop();
+        document.write("<br><br>"+y);
+        document.write("<br>"+friends);
+    </script>
 
     </body>
 </html>
